Make list mutable